added embedded databases